force-app/main/default/objects/Contact/fields/B2C_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>B2C_Account_Type__c</fullName>
    <label>B2C Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Inquirer</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>