force-app/main/default/objects/Contact/fields/B2C_BirthDay__c.field-meta.xml
<CustomField>
    <fullName>B2C_BirthDay__c</fullName>
    <label>B2C BirthDay</label>
    <length>10</length>
    <type>Text</type>
</CustomField>