force-app/main/default/objects/Contact/fields/B2C_Customer_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_Address_ID__c</fullName>
    <label>B2C Customer Address ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>