force-app/main/default/objects/Contact/fields/B2C_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_Type__c</fullName>
    <label>B2C Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMERS</fullName>
            </value>
            <value>
                <fullName>DECEASED</fullName>
            </value>
            <value>
                <fullName>EX-PLATINUM</fullName>
            </value>
            <value>
                <fullName>PLAT 4 STAR</fullName>
            </value>
            <value>
                <fullName>T PLATINUM P4</fullName>
            </value>
            <value>
                <fullName>INMATES INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>