force-app/main/default/objects/Contact/fields/B2C_GSK__c.field-meta.xml
<CustomField>
    <fullName>B2C_GSK__c</fullName>
    <label>B2C GSK</label>
    <length>10</length>
    <type>Text</type>
</CustomField>