force-app/main/default/objects/Contact/fields/B2C_Platinum_Status__c.field-meta.xml
<CustomField>
    <fullName>B2C_Platinum_Status__c</fullName>
    <label>B2C Platinum Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Star</fullName>
            </value>
            <value>
                <fullName>Bead Shop</fullName>
            </value>
            <value>
                <fullName>Bead Buying Group</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>